# tarot-website

./: Pipfile  README.md  pyproject.toml
tarot-website/: about.html  card.html  cards.html  contact.html  docs.html  index.html  index.js  yourcard.html
tarot-website/src/: getAllCards.js  getCard.js  get_all_cards.py  get_card.py  style.css
website/: Pipfile  config.py  data.py  main.py
website/static/css/: style.css
website/templates/: 0.html  1.html  10.html  11.html  404.html  about.html  base.html  card.html  cards.html  docs.html  index.html
