[tool.poetry]
name = "tarot-website"
version = "0.1.0"
description = ""
authors = ["AlmirPaulo <ap.freelas@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
Flask = "^2.0.1"
gunicorn = "^20.1.0"
requests = "^2.26.0"

[tool.poetry.dev-dependencies]
black = "^21.8b0"
grip = "^4.5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
